compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__set_member_op_wrong_types_in.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    type ts : set of boolean\n    var s : ts\n\n    % should all produce booleans\n    var _v_res : boolean\n\n    % not a set\n    _v_res := true in true\n    % incompatible element types\n    _v_res := 1 in s\n    "
---
"ts"@"src/main.t:10..12" [Type]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"ts"@"src/main.t:15..29" [Set]: <error>
"s"@"src/main.t:38..39" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"_v_res"@"src/main.t:88..94" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:141..143: mismatched types for `in`
| note for src/main.t:144..148: this is of type `boolean`
| error for src/main.t:144..148: `boolean` is not a set type
| info: operand must be a set
error at src/main.t:198..200: mismatched types for `in`
| note for src/main.t:201..202: this is of type `set ts (of boolean)`
| note for src/main.t:196..197: this is of type `{integer}`
| error for src/main.t:201..202: `{integer}` is not the same as `boolean`
| info: operand and element type must be the same
