compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_char_const_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : char(1.0 div 0.0)"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:17..20: cannot compute expression at compile-time
| error for src/main.t:17..20: division by zero in compile-time expression
