compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_char_err_dyn_sized.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var N : int var _ : char(N) := 1"
---
"N"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"_"@"src/main.t:16..17" [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:20..27: unsupported type
| error for src/main.t:20..27: dynamically sized `char(N)` isn't supported yet
error at src/main.t:31..32: mismatched types
| note for src/main.t:31..32: this is of type `{integer}`
| note for src/main.t:20..27: this is of type `char({dynamic})`
| info: `{integer}` is not assignable into `char({dynamic})`
