compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_char_wrong_type.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : char(1.0)"
---
"_"@(FileId(1), 4..5) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 13..16: mismatched types
| note in file FileId(1) for 13..16: this is of type `real`
| info: `real` is not an integer type
